fixed z-index

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -33,6 +33,7 @@
         width: 100%;
         transform: translateX(-100%);
         transition: all .3s ease;
+        z-index: 1000;
 
         &.active {
             transform: translateX(0);
